--- a/HTML-repo/index.html
+++ b/HTML-repo/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript"></script>
 	</head>
 <body>
+	<p>Hello World</p>
 	<!--this is the body of html-->
 	<header>
 		<!--this is the div section for a logo on html-->
